2006-02-01  Matt Wilson  <msw@gimp.org>

	* plug-ins/common/compressor.c (run): file_{gz,bz2}_save takes 5
	parameters, not 4.  Correct the nparams check in non-interactive
	mode.

2006-02-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animoptimize.c: renamed to "Unoptimize".

	* plug-ins/common/polar.c: renamed to "Polar Coordinates" and some
	other string changes.

2006-02-01  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_about.c
	* plug-ins/imagemap/imap_file.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_menu.c
	* plug-ins/imagemap/imap_preferences.c: renamed to "Image Map" and
	unified spelling.

2006-01-31  Michael Schumacher  <schumaml@cvs.gnome.org>

	* app/core/gimpbrushpipe.c: applying a patch by Joao S. O. Bueno
	Calligaris which implements PIPE_SELECT_VELOCITY for brush
	pipes. Fixes bug #150227.

2006-01-31  Sven Neumann  <sven@gimp.org>

	* app/tools/gimplevelstool.c (gimp_levels_tool_color_picker_new):
	manually add the icons to the color picker buttons instead of
	abusing the stock-id property. Fixes bug #325745.

2006-01-31  Michael Natterer  <mitch@gimp.org>

	* autogen.sh: s/head -1/head -n 1/ (spotted by brix).

2006-01-30  Akkana Peck	 <akkana@cvs.gnome.org>

	* configure.in: don't report yes for xjt if on Windows.

2006-01-30  Michael Schumacher  <schumaml@cvs.gnome.org>

	* app/tools/gimpmeasuretool.c: use the closest corner of the
	current pixel as origin. Fixes bug #329000.
	
2006-01-30  Sven Neumann  <sven@gimp.org>

	* app/config/config-types.h: moved GIMP_PARAM defines from here ...

	* libgimpbase/gimpparam.h: ... to this new files.

	* libgimpbase/Makefile.am
	* libgimpbase/gimpbasetypes.h: include the new header file.

	* libgimp/gimpfontselectbutton.c
	* libgimpconfig/gimpcolorconfig.c
	* libgimpthumb/gimpthumbnail.c
	* libgimpwidgets/gimpcellrenderercolor.c
	* libgimpwidgets/gimpcellrenderertoggle.c
	* libgimpwidgets/gimpcolorarea.c
	* libgimpwidgets/gimpcolorbutton.c