@@ -1,3 +1,8 @@
+2006-02-03  Karine Delvare  <kdelvare@nerim.net>
+
+	* app/tools/gimprectangletool.c: aspect ratio should be width /
+	height.
+
 2006-02-01  Matt Wilson  <msw@gimp.org>
 
 	* plug-ins/common/compressor.c (run): file_{gz,bz2}_save takes 5
